examples/test/testpolicy11974.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11974
  namespace: namespace319
spec:
  podSelector:
    matchLabels:
      key26: value16
      key30: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value20
      podSelector:
        matchLabels:
          key2: value7
          key39: value36
